@@ -71,6 +71,17 @@
         <div id="news">
 	    <h2 class="">News</h2>
 	    
+	    <h3>October 15th 2007</h3>
+   	      Stable version 0.8.1 released! Bugfixes since previous stable
+   	      version include:
+   	      <ul>
+		<li>Fix sync configuration on Fedora, Gentoo, and others.<li>
+		<li>Fix highlighting behavior in note search.</li>
+		<li>Updated translations for many languages.</li>
+   	        <li>And <a href="http://svn.gnome.org/viewcvs/tomboy/tags/TOMBOY_0_8_1/NEWS?view=markup">more</a></li>
+   	      </ul>
+   	      <a href="download.html">Download it</a>
+	    
 	    <h3>September 17th 2007</h3>
    	      Stable version 0.8.0 released! New features since previous stable
    	      version include:
