@@ -1,4 +1,9 @@
-2007-08-13  Sandy Armstrong  <sanfordarmstrong@gmail.com>
+2007-10-15  Sandy Armstrong  <sanfordarmstrong@gmail.com>
+
+	* index.html: Updated for 0.8.1 release.
+	* download.html: Ditto.
+
+2007-09-17  Sandy Armstrong  <sanfordarmstrong@gmail.com>
 
 	* index.html: Updated for 0.8.0 release.
 	* download.html: Ditto.
